--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,63 +3,63 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway:400,400i,500,500i,600,600i,700,700i,800,800i,900,900i');
 
 body{
-	margin: 0;
+    margin: 0;
 }
 
 header{
-	background: black;
-	color: white;
-	padding: 8px 0px 6px 40px;
-	height: 45px;
+    background: black;
+    color: white;
+    padding: 8px 0 6px 40px;
+    height: 45px;
 }
 
 header h1{
-	display: inline;
-	font-family: 'Oswald', sans-serif;
-	font-weight: 400;
-	font-size: 32px;
-	float: left;
-	margin-top: 0px;
-	margin-right: 10px;
+    display: inline;
+    font-family: 'Oswald', sans-serif;
+    font-weight: 400;
+    font-size: 32px;
+    float: left;
+    margin-top: 0;
+    margin-right: 10px;
 }
 
 nav ul{
-	display: inline;
-	padding: 0px;
-	float: left;
+    display: inline;
+    padding: 0;
+    float: left;
 }
 
 nav ul li{
-	display: inline-block;
-	list-style-type: none;
-	color: white;
-	float: left;
-	margin-left: 12px;
+    display: inline-block;
+    list-style-type: none;
+    color: white;
+    float: left;
+    margin-left: 12px;
 }
 
 nav ul li a{
-	color: white;
-	text-decoration: none;
+    color: white;
+    text-decoration: none;
 }
 
 #nav{
-	font-family: 'Montserrat', sans-serif;
+    font-family: 'Montserrat', sans-serif;
 }
 
 .clicked{
-	background-color: #1edb57;
-	padding: 30px 10px 16px 10px;
+    background-color: #1edb57;
+    padding: 30px 10px 16px 10px;
 }
 
 .notclicked:hover{
-	background-color: red;
-	padding: 30px 10px 16px 10px;
+    background-color: red;
+    padding: 30px 10px 16px 10px;
 }
 
 .welcome{
-	font-family: 'Raleway', sans-serif;
-	margin: 0;
-	padding: 9% 5% 0% 36%;
-	font-size: 30px;
-	color: #108ee8;
+    font-family: 'Raleway', sans-serif;
+    margin: 0;
+    padding: 9% 5% 0 36%;
+    font-size: 30px;
+    color: #108ee8;
 }
